k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api
  namespace: devops-api
spec:
  selector:
    app: devops-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
